Update project configuration and implement metadata fetching feature
- Added support for fetching metadata from URLs using metascraper.
- Updated next.config.ts to allow remote image patterns.
- Modified package.json to include new metascraper dependencies.
- Introduced a new API route for metadata scraping.
- Enhanced the share page and app shell with URL input and metadata display functionality.
- Updated .gitignore to exclude package-lock.json.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "got": "^14.6.4",
+    "metascraper": "^5.49.5",
+    "metascraper-author": "^5.49.5",
+    "metascraper-date": "^5.49.5",
+    "metascraper-description": "^5.49.5",
+    "metascraper-image": "^5.49.5",
+    "metascraper-logo": "^5.49.5",
+    "metascraper-publisher": "^5.49.5",
+    "metascraper-title": "^5.49.5",
+    "metascraper-url": "^5.49.5",
     "motion": "^12.23.24",
     "next": "16.0.3",
     "react": "19.2.0",
